# Added by Luc Michalski - 2016

add_subdirectory(FilterShowcase)
add_subdirectory(FilterShowcaseSwift)
add_subdirectory(MultiViewFilterExample)
add_subdirectory(PlaygroundExample)
add_subdirectory(ShaderDesigner)
add_subdirectory(SimplePhotoFilter)
add_subdirectory(SimpleVideoFileFilter)
add_subdirectory(SimpleVideoFilter)