# Added by Luc Michalski - 2016

add_subdirectory(BenchmarkSuite)
add_subdirectory(ColorObjectTracking)
add_subdirectory(CubeExample)
add_subdirectory(FeatureExtractionTest)
add_subdirectory(FilterShowcase)
add_subdirectory(FilterShowcaseSwift)
add_subdirectory(MultiViewFilterExample)
add_subdirectory(RawDataTest)
add_subdirectory(SharedIcons)
add_subdirectory(SimpleImageFilter)
add_subdirectory(SimplePhotoFilter)
add_subdirectory(SimpleSwiftVideoFilterExample)
add_subdirectory(SimpleVideoFileFilter)
add_subdirectory(SimpleVideoFilter)